Version 2.02.74 - 
=====================================
  Replace alloca with dm_malloc in _aligned_io.
  Fix partial mode operations for lvm1 metadata format.
  Track recursive filter iteration to avoid refreshing while in use. (2.02.56)
  Revert to old glibc vsnprintf behaviour in emit_to_buffer() to catch overflow.
  Allocate buffer for metadata tags dynamically to remove 4k limit.
  Add random suffix to archive file names to prevent races when being created.
  Reinitialize archive and backup handling on toolcontext refresh.
  Fix opprobriously slow I/O to cluster mirrors created with --nosync.
  Make poll_mirror_progress report PROGRESS_CHECK_FAILED if LV is not a mirror.
  Like mirrors, don't scan origins if ignore_suspended_devices() is set.
  Fix return type qualifier to avoid compiler warning. (2.02.69)
  Automatically generate LSB Requires-Start for clvmd init script.
  Fix return code of pvmove --abort PV.
  Fix pvmove --abort to remove even for empty pvmove LV.
  Add configure --with-default-data-alignment.
  Update heuristic used for default and detected data alignment.
  Add "devices/default_data_alignment" to lvm.conf.
  Add implmentation for simple numeric 'get' property functions.
  Define GET_NUM_PROPERTY_FN macro to simplify numeric property 'get' function
  Add properties.[ch] to lib/report using columns.h.
  Add macro definitions to report infrastructure for character array length.
  Remove explicit double quotes from columns.h 'id' entries.
  Add 'flags' field to columns.h and define FIELD_MODIFIABLE.
  Add vg_mda_size and vg_mda_free functions.
  Simplify MD/swap signature detection in pvcreate and allow aborting.
  Allow --yes to be used without --force mode.
  Fix file descriptor leak in swap signature detection error path.
  Detect and allow abort in pvcreate if LUKS signature is detected.
  Always mask lock flags correctly when checking for LCK_WRITE.

Version 2.02.73 - 18th August 2010
==================================